# CarNoteCPP

./: README.md
Src/: Adat.h  Auto.cpp  Auto.h  CMakeLists.txt  Jarmu.cpp  Jarmu.h  Main.cpp  Main.h  Motor.cpp  Motor.h  Teherauto.cpp  Teherauto.h  Tesztek.cpp  Tesztek.h  memtrace.cpp  memtrace.h
